plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0-RC1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.floatie'
version = '1.0.0'

java {
	sourceCompatibility = '25'
	targetCompatibility = '25'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
	testImplementation 'org.testcontainers:testcontainers:1.19.3'
	testImplementation 'org.testcontainers:postgresql:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	if (project.hasProperty('jvmArgs')) {
		jvmArgs = project.jvmArgs.split('\\s+').toList()
	}
}